Fix deprecations + documentation navigator position on mobile

--- a/src/assets/styles/components/section.scss
+++ b/src/assets/styles/components/section.scss
@@ -204,7 +204,7 @@
   &__sidebar_fixed {
     position: fixed;
     width: 100%;
-    top: -1px;
+    top: 5rem;
     box-shadow: 0px 3px 4px 2px rgba(109, 178, 79, 0.2);
   }
 
